@@ -1,5 +1,10 @@
 2008-11-09  kitone  <kitone@gna.org>
 
+	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
+	Fix: action name and add tooltip.
+
+2008-11-09  kitone  <kitone@gna.org>
+
 	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
 	Work now without menubar.xml.
 
